src/tests/fixtures/extend_type/nonGQLFirstArgumentType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class SomeType {
  // No fields
}

class Foo {}

/** @gqlField */
export function greeting(query: Foo): string {
  return "Hello world!";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_type/nonGQLFirstArgumentType.invalid.ts:9:33 - error: Expected a reference to a declaration with a `@gql*` docblock. Grats needs to determine which GraphQL type is being referenced in this location. This requires being able to resolve type references to their `@gql` annotated declaration.

9 export function greeting(query: Foo): string {
                                  ~~~

  src/tests/fixtures/extend_type/nonGQLFirstArgumentType.invalid.ts:6:1
    6 class Foo {}
      ~~~~~~~~~~~~
    Did you mean to add a `@gql*` docblock to this declaration?
